# simple-compiler

./: .gitignore  AGENDA.md  CMakeLists.txt  LICENSE  LICENSE_HEADER.txt  Makefile  README.md
core/include/core/: utils.h
core/include/core/ds/: arena.h  dynamic_array.h  ht.h  stack.h
core/src/: utils.c
core/src/ds/: arena.c  dynamic_array.c  ht.c  stack.c
examples/: arrays.scl  binary_search.scl  calculator.scl  count_digits.scl  factorial.scl  fibonacci.scl  fizzbuzz.scl  functions_add_numbers.scl  int_literals.scl  linear_search.scl  n_prime_numbers.scl  power.scl  rule110.scl
frontend/include/frontend/: ast.h  lexer.h  parser.h  semantic.h  token.h  types.h  var.h
frontend/src/: ast.c  lexer.c  parser.c  semantic.c  token.c  types.c  var.c
includes/: cstate.h  fasm_utils.h  fstate.h
lib/: io.scl
sclc/include/: ast.h  common.h  cstate.h  fstate.h  lexer.h  parser.h  semantic.h  token.h  utils.h  var.h
sclc/include/backend/llvm/: ld_utils.hpp  llvm.h  llvm_irgen.hpp
sclc/include/ds/: arena.h  dynamic_array.h  ht.h  stack.h
sclc/include/sclc/: cstate.h  fstate.h
sclc/include/sclc/backend/: backend.h
sclc/include/sclc/backend/llvm/: llvm.h
sclc/src/: ast.c  cstate.c  fstate.c  lexer.c  parser.c  sclc.c  semantic.c  token.c  utils.c  var.c
sclc/src/backend/: backend.c
sclc/src/backend/llvm/: ld_utils.cpp  llvm.cpp  llvm_irgen.cpp
sclc/src/ds/: arena.c  dynamic_array.c  ht.c  stack.c
src/: codegen.c  cstate.c  fasm_utils.c  fstate.c  ld_utils.c  lexer.c  parser.c  sclc.c
